# mORMaid

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: code-quality.yaml
src/: lib.rs  utils.rs
src/erd/: entity.rs  mod.rs  relationship.rs  utils.rs
src/req/: element.rs  mod.rs  relationship.rs  requirement.rs
src/requirement/: relationship.rs  requirement.rs
